fixed issue with image

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
       Click me!
     </button>
     <br /><br /><br />
-    <img src="shutterstock_170935235.jpg" width="600px" height="600px" />
+    <img src="img1.jpg" width="600px" height="600px" />
   </body>
 </html>
